--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yowainwright/common-utilities",
+  "name": "@common-utilities/root",
   "version": "0.0.1",
   "description": "Common utilities for javascript development",
   "main": "index.js",
