--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Jeff Wainwright <yowainwright@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "lerna": "^3.20.2",
     "markdownlint-cli": "^0.14.0",
     "ts-jest": "^24.0.0",
     "tslint": "^5.13.1",
