--- a/package.json
+++ b/package.json
@@ -6,18 +6,78 @@
   "repository": "git@github.com:yowainwright/common-utilities.git",
   "author": "Jeff Wainwright <yowainwright@gmail.com>",
   "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-lerna-scopes": "^8.3.4",
+    "@commitlint/prompt": "^8.3.5",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "commitizen": "^4.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "jest": "^25.2.3",
+    "lerna": "^3.20.2",
     "markdownlint-cli": "^0.22.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^25.2.1",
     "tslint": "^6.0.0",
-    "lerna": "^3.20.2",
     "typescript": "^3.3.3333",
     "write-good": "^1.0.1"
   },
   "scripts": {
-    "start": "npm i",
-    "build": "tsc",
-    "lint:ts": "tslint -c tslint.json '*.{ts}'",
-    "tsc-check": "tsc --noEmit"
+    "build": "lerna run build --stream --parallel",
+    "clean": "lerna clean",
+    "ci": "run-s lint:ci tsc test:ci",
+    "lint": "yarn lint:cmd --fix",
+    "lint:ci": "yarn lint:cmd",
+    "lint:cmd": "eslint . --ext '.ts,.tsx,.js,.json,.md,.snap' --cache",
+    "test": "yarn test:cmd",
+    "test:ci": "yarn test:cmd --ci",
+    "test:cmd": "jest",
+    "commit": "git-cz",
+    "commit:retry": "git-cz --retry",
+    "commitmsg": "commitlint -e",
+    "deploy": "lerna publish from-package --ignore-scripts",
+    "deploy:all": "lerna publish --ignore-scripts",
+    "refresh": "lerna clean",
+    "rebuild": "rm -rf yarn.lock && yarn",
+    "tsc": "tsc -p ./tsconfig.test.json"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/@commitlint/prompt"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "post-checkout": "if [[ $HUSKY_GIT_PARAMS =~ 1$ ]]; then yarn; fi",
+      "post-merge": "yarn",
+      "post-rewrite": "yarn",
+      "pre-commit": "yarn tsc && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,md}": [
+      "yarn lint"
+    ],
+    "*.{ts,tsx}": [
+      "jest --bail --findRelatedTests"
+    ]
   }
 }
