fix(root): adds public config

--- a/packages/trace/package.json
+++ b/packages/trace/package.json
@@ -4,7 +4,9 @@
   "description": "A basic implementation of the common utility function, Trace",
   "main": "dist/index.js",
   "license": "MIT",
-  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": "git@github.com:yowainwright/common-utilities.git",
   "author": "Jeff Wainwright <yowainwright@gmail.com> (jeffry.in)",
   "scripts": {
@@ -13,5 +15,6 @@
     "tsc": "tsc --noEmit",
     "lint": "eslint . --ext '.ts,.tsx,.js,.json,.md,.snap' --cache",
     "lint:fix": "yarn lint -- --fix"
-  }
+  },
+  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed"
 }
