fix(root): removes js config

--- a/package.json
+++ b/package.json
@@ -63,6 +63,14 @@
       "path": "node_modules/@commitlint/prompt"
     }
   },
+  "commitlint": {
+    "extends": ["@commitlint/config-lerna-scopes"],
+    "rules": {
+      "header-max-length": [2, "always", 120],
+      "scope-enum": [2, "always", ["root", "compose", "head", "pipe", "trace"]],
+      "type-enum": [2, "always", ["chore", "feat", "fix", "docs", "style", "refactor", "test", "release", "revert"]]
+    }
+  },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
@@ -70,6 +78,16 @@
       "post-merge": "yarn",
       "post-rewrite": "yarn",
       "pre-commit": "yarn tsc && lint-staged"
+    }
+  },
+  "jest": {
+    "projects": ["<rootDir>/packages/*"],
+    "resetMocks": true,
+    "rootDir": "./",
+    "roots": ["<rootDir>/src"],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
     }
   },
   "lint-staged": {
