--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "ci": "run-s lint:ci tsc test:ci",
     "lint": "yarn lint:cmd --fix",
     "lint:ci": "yarn lint:cmd",
-    "lint:cmd": "eslint . --ext '.ts,.tsx,.js,.json,.md,.snap' --cache",
+    "lint:cmd": "eslint . --ext '.ts,.tsx,.js,.json,.snap' --cache",
     "test": "yarn test:cmd",
     "test:ci": "yarn test:cmd --ci",
     "test:cmd": "jest",
