fix(root): fixes prettier table issue

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
 	"printWidth": 120,
 	"useTabs": false,
 	"singleQuote": true,
-	"jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "proseWrap": "never"
 }
