fix(root): updates prettier table linting again

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-	"semi": false,
-	"trailingComma": "all",
-	"printWidth": 120,
-	"useTabs": false,
-	"singleQuote": true,
+  "semi": false,
+  "trailingComma": "all",
+  "printWidth": 120,
+  "useTabs": false,
+  "singleQuote": true,
   "jsxSingleQuote": true,
-  "proseWrap": "never"
+  "proseWrap": "preserve"
 }
