--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "jest": "^25.2.3",
     "lerna": "^3.20.2",
+    "lint-staged": "^10.1.1",
     "markdownlint-cli": "^0.22.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.2",
@@ -122,9 +124,5 @@
     "*.{ts,tsx}": [
       "jest --bail --findRelatedTests"
     ]
-  },
-  "dependencies": {
-    "eslint-plugin-react": "^7.19.0",
-    "lint-staged": "^10.1.1"
   }
 }
