--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@common-utilities/root",
   "version": "0.0.1",
-  "description": "Common utilities for javascript development",
+  "description": "Common utilities for javascript development 🧰",
   "main": "index.js",
   "repository": "git@github.com:yowainwright/common-utilities.git",
   "author": "Jeff Wainwright <yowainwright@gmail.com>",
@@ -32,14 +32,11 @@
     "jest": "^25.2.3",
     "lerna": "^3.20.2",
     "lint-staged": "^10.1.1",
-    "markdownlint-cli": "^0.22.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.2.1",
-    "tslint": "^6.0.0",
-    "typescript": "^3.3.3333",
-    "write-good": "^1.0.1"
+    "tslib": "^1.11.1",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "build": "lerna run build --stream --parallel",
@@ -57,7 +54,7 @@
     "deploy": "lerna publish from-package --ignore-scripts",
     "deploy:all": "lerna publish --ignore-scripts",
     "refresh": "lerna clean",
-    "rebuild": "rm -rf yarn.lock && yarn",
+    "rebuild": "rifraf yarn.lock && yarn",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
   "config": {
