--- a/packages/repeat/package.json
+++ b/packages/repeat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/repeat",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A common function composed of function arguments which recursively invoke a callback function based on iterations returning a final value",
   "main": "dist/index.js",
   "license": "MIT",
@@ -11,10 +11,7 @@
   "author": "Jeff Wainwright <yowainwright@gmail.com> (jeffry.in)",
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist",
-    "tsc": "tsc --noEmit",
-    "lint": "eslint . --ext '.ts,.tsx,.js,.json,.md,.snap' --cache",
-    "lint:fix": "yarn lint -- --fix"
+    "clean": "rimraf dist"
   },
   "jest": {
     "name": "@common-utilities/trace",
