--- a/packages/fllter-array/package.json
+++ b/packages/fllter-array/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@common-utilities/is-object",
+  "name": "@common-utilities/filter-array",
   "version": "0.0.1",
-  "description": "Basic implementations of common utility function that check if data is an object 🎛",
+  "description": "A basic implementation of the common utility function, filter-array 🧹",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -11,7 +11,7 @@
   "author": "Jeff Wainwright <yowainwright@gmail.com>",
   "license": "MIT",
   "jest": {
-    "name": "@common-utilities/is-object",
+    "name": "@common-utilities/filter-array",
     "projects": [
       "<rootDir>/packages/*"
     ],
@@ -25,5 +25,4 @@
       "^.+\\.(ts)$": "ts-jest"
     }
   }
-}
 }
