--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
   },
   "scripts": {
     "build": "yarn clean:dist && yarn build:dist",
-    "build:dist": "lerna exec --no-bail --stream yarn build",
+    "build:dist": "lerna run build",
     "clean": "lerna clean",
-    "clean:dist": "lerna exec --no-bail --stream yarn clean",
+    "clean:dist": "lerna run clean",
     "ci": "run-s lint:ci tsc test:ci",
     "lint": "yarn lint:cmd --fix",
     "lint:ci": "yarn lint:cmd",
     "lint:cmd": "eslint . --ext '.ts,.tsx,.js,.json,.snap' --cache",
     "test": "yarn test:cmd",
     "test:ci": "yarn test:cmd --ci",
-    "test:cmd": "jest -o --maxWorkers=4 --noStackTrace --collectCoverage",
+    "test:cmd": "jest --maxWorkers=4 --noStackTrace --collectCoverage=true",
     "commit": "git-cz",
     "commit:retry": "git-cz --retry",
     "commitmsg": "commitlint -e",
-    "deploy": "lerna publish from-package --ignore-scripts --canary --yes",
-    "deploy:all": "lerna publish --ignore-scripts",
+    "deploy": "yarn build && lerna publish from-package --ignore-scripts --canary --yes",
+    "deploy:all": "yarn build && lerna publish --ignore-scripts",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
   "config": {
