--- a/packages/merge-objects/package.json
+++ b/packages/merge-objects/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.1",
   "description": "A basic implementation of the common utility function, merge-objects 👯‍♂️",
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": "git@github.com:yowainwright/common-utilities.git",
+  "author": "Jeff Wainwright <yowainwright@gmail.com> (jeffry.in)",
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist"
   },
-  "repository": "git@github.com:yowainwright/common-utilities.git",
-  "author": "Jeff Wainwright <yowainwright@gmail.com>",
-  "license": "MIT",
   "jest": {
     "name": "@common-utilities/merge-objects",
     "projects": [
@@ -24,5 +29,6 @@
     "transform": {
       "^.+\\.(ts)$": "ts-jest"
     }
-  }
+  },
+  "gitHead": "91f796bedc77546871476c1b71d4bd771973f626"
 }
