--- a/package.json
+++ b/package.json
@@ -14,20 +14,14 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-lerna-scopes": "^11.0.0",
     "@commitlint/prompt": "^11.0.0",
+    "@heartly/eslint-config-typescript": "^0.0.2",
+    "@heartly/prettier-config": "^0.0.1",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "commitizen": "^4.0.3",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^24.0.1",
-    "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-markdown": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "jest": "^25.4.0",
     "lerna": "^3.20.2",
@@ -46,7 +40,7 @@
     "ci": "run-s lint:ci tsc test:ci",
     "lint": "yarn lint:cmd --fix",
     "lint:ci": "yarn lint:cmd",
-    "lint:cmd": "eslint . --ext '.ts,.tsx,.js,.json,.snap' --cache",
+    "lint:cmd": "eslint . --ext '.ts'",
     "test": "yarn test:cmd",
     "test:ci": "yarn test:cmd --ci",
     "test:cmd": "jest --maxWorkers=4 --noStackTrace --collectCoverage=true",
@@ -55,6 +49,7 @@
     "commitmsg": "commitlint -e",
     "deploy": "yarn build && lerna publish from-package --ignore-scripts --canary --yes",
     "deploy:all": "yarn build && lerna publish --ignore-scripts",
+    "refresh": "rm -rf node_modules yarn.lock && yarn && yarn build",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
   "config": {
@@ -126,5 +121,6 @@
     "*.{ts,tsx}": [
       "jest --bail --findRelatedTests"
     ]
-  }
+  },
+  "prettier": "@heartly/eslint-config-typescript/dist/prettier"
 }
