--- a/packages/head/package.json
+++ b/packages/head/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@common-utilities/head",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A basic implementation of the common utility function, Head 👤",
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
