--- a/packages/trace/package.json
+++ b/packages/trace/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@common-utilities/trace",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A basic implementation of the common utility function, Trace 🖋",
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
