--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,4 +1,5 @@
 # .kodiak.toml
 # Minimal config. version is the only required field.
 version = 1
+merge.automerge_label = 'automerge 🚀'
 update.autoupdate_label = 'autoupdate 🔁'
