--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,5 +1,6 @@
 # .kodiak.toml
 # Minimal config. version is the only required field.
 version = 1
+auto_approve_usernames = ["dependabot"]
 merge.automerge_label = 'automerge 🚀'
 update.autoupdate_label = 'autoupdate 🔁'
