--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -2,5 +2,5 @@
 # Minimal config. version is the only required field.
 version = 1
 auto_approve_usernames = ["dependabot"]
-merge.automerge_label = ['dependencies','automerge 🚀']
+merge.automerge_labels = ['dependencies','automerge 🚀']
 update.autoupdate_label = ['dependencies','autoupdate 🔁']
