--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -3,4 +3,4 @@
 version = 1
 auto_approve_usernames = ["dependabot"]
 merge.automerge_labels = ['dependencies','automerge 🚀']
-update.autoupdate_label = ['dependencies','autoupdate 🔁']
+update.autoupdate_labels = ['dependencies','autoupdate 🔁']
