fix(root): adds keywords, removes function

--- a/packages/compose/package.json
+++ b/packages/compose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/compose",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A basic implementation of the common utility function, Compose 🚂",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,5 +30,11 @@
       "^.+\\.(ts)$": "ts-jest"
     }
   },
-  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed"
+  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed",
+  "keywords": [
+    "compose",
+    "common-utilities",
+    "utility",
+    "functional"
+  ]
 }
