--- a/packages/is-object/package.json
+++ b/packages/is-object/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/is-object",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Basic implementations of common utility function that check if data is an object 🎛",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,5 +30,12 @@
       "^.+\\.(ts)$": "ts-jest"
     }
   },
-  "gitHead": "91f796bedc77546871476c1b71d4bd771973f626"
+  "gitHead": "91f796bedc77546871476c1b71d4bd771973f626",
+  "keywords": [
+    "object",
+    "array",
+    "is-object",
+    "utility",
+    "functional"
+  ]
 }
