--- a/packages/pipe/package.json
+++ b/packages/pipe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/pipe",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A basic implementation of the common utility function, Pipe",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,5 +30,12 @@
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
   },
-  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed"
+  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed",
+  "keywords": [
+    "pipe",
+    "piping",
+    "reduce",
+    "utility",
+    "functional"
+  ]
 }
