--- a/packages/wait-until-defined/package.json
+++ b/packages/wait-until-defined/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/wait-until-defined",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A basic implementation of the common utility function, wait until defined ⌚️",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,5 +30,17 @@
       "^.+\\.(ts)$": "ts-jest"
     }
   },
-  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed"
+  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed",
+  "keywords": [
+    "aysnc",
+    "wait",
+    "await",
+    "callback",
+    "later",
+    "wait-until",
+    "until",
+    "functional",
+    "typescript",
+    "utility"
+  ]
 }
