--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/node": "^14.6.4",
     "commitizen": "^4.0.3",
     "eslint": "7.22.0",
-    "husky": "^5.0.9",
+    "husky": "4.2.1",
     "jest": "^25.4.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.1.1",
