--- a/packages/kebab-to-camel-string/package.json
+++ b/packages/kebab-to-camel-string/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/kebab-to-camel-string",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A common function for returning a kebab string as a camel string. 🍢🐫",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -29,5 +29,13 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
-  }
+  },
+  "keywords": [
+    "strings",
+    "no-regex",
+    "text",
+    "formatting",
+    "utility",
+    "functional"
+  ]
 }
