--- a/packages/merge-objects/package.json
+++ b/packages/merge-objects/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/merge-objects",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A basic implementation of the common utility function, merge-objects 👯‍♂️",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,5 +30,15 @@
       "^.+\\.(ts)$": "ts-jest"
     }
   },
-  "gitHead": "91f796bedc77546871476c1b71d4bd771973f626"
+  "gitHead": "91f796bedc77546871476c1b71d4bd771973f626",
+  "keywords": [
+    "objects",
+    "deep merge",
+    "deep-merge",
+    "merge-objects",
+    "grouping",
+    "group",
+    "utility",
+    "functional"
+  ]
 }
