--- a/packages/repeat/package.json
+++ b/packages/repeat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/repeat",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A common function composed of function arguments which recursively invoke a callback function based on iterations returning a final value",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -29,5 +29,14 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
-  }
+  },
+  "keywords": [
+    "repeat",
+    "recursive",
+    "currying",
+    "functaional-while",
+    "while",
+    "utility",
+    "functional"
+  ]
 }
