--- a/packages/trim-whitespace/package.json
+++ b/packages/trim-whitespace/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/trim-whitespace",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A basic implementation of the common utility function, trim-whitespace ⬜️",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -32,5 +32,16 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
-  }
+  },
+  "keywords": [
+    "white-space",
+    "no regex",
+    "whitespace",
+    "trim",
+    "clean",
+    "text",
+    "formatting",
+    "utility",
+    "functional"
+  ]
 }
