--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/node": "^14.6.4",
     "commitizen": "^4.0.3",
     "eslint": "7.22.0",
-    "husky": "5.1.3",
+    "husky": "4.2.1",
     "jest": "^25.4.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.1.1",
@@ -46,8 +46,7 @@
     "commit": "git-cz",
     "commit:retry": "git-cz --retry",
     "commitmsg": "commitlint -e",
-    "deploy": "yarn build && lerna publish from-package --ignore-scripts --canary --yes",
-    "deploy:all": "yarn build && lerna publish --ignore-scripts",
+    "deploy": "yarn build && lerna publish from-package",
     "refresh": "rm -rf node_modules yarn.lock && yarn && yarn build",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
