feat(debounce): adds debounce

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         [
           "root",
           "compose",
+          "debounce",
           "head",
           "pipe",
           "repeat",
