--- a/packages/trace/package.json
+++ b/packages/trace/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@common-utilities/trace",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A basic implementation of the common utility function, Trace 🖋",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -20,20 +20,9 @@
   },
   "jest": {
     "name": "@common-utilities/trace",
-    "projects": [
-      "<rootDir>/packages/*"
-    ],
-    "resetMocks": true,
     "rootDir": "./",
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    }
+    "roots": [ "<rootDir>/src"]
   },
-  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed",
   "keywords": [
     "log",
     "check",
