--- a/packages/wait-until-defined/package.json
+++ b/packages/wait-until-defined/package.json
@@ -17,20 +17,9 @@
   },
   "jest": {
     "name": "@common-utilities/wait-until-defined",
-    "projects": [
-      "<rootDir>/packages/*"
-    ],
-    "resetMocks": true,
     "rootDir": "./",
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.(ts)$": "ts-jest"
-    }
+    "roots": [ "<rootDir>/src"]
   },
-  "gitHead": "a4d185229ac5a8bd02f6c9b80a4a39416f0ca6ed",
   "keywords": [
     "aysnc",
     "wait",
