--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^17.0.0",
     "commitizen": "^4.0.3",
-    "eslint": "8.5.0",
+    "eslint": "^7.11.0",
     "husky": "4.2.1",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
@@ -28,7 +28,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.0.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
