feat(rot13): init rot13 encryption

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
           "kebab-to-camel-string",
           "throttle",
           "trim-whitespace",
-          "wait-until-defined"
+          "wait-until-defined",
+          "rot13"
         ]
       ],
       "type-enum": [
